changed clearConsole() to take into account OS